--- a/docs/vision/object_detection.ipynb
+++ b/docs/vision/object_detection.ipynb
@@ -83,28 +83,9 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "Pip0LHj3ZqgL",
-        "outputId": "00c0a190-28ad-4a9e-8d74-a65404bdddf8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Pip0LHj3ZqgL"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m51.8/51.8 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.6/43.6 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.9/2.9 MB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.5/3.5 MB\u001b[0m \u001b[31m29.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m242.5/242.5 kB\u001b[0m \u001b[31m12.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m104.1/104.1 kB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Building wheel for seqeval (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install -U -q \"tf-models-official\""
       ]
@@ -152,13 +133,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "iT27_SOTY1Dz",
-        "outputId": "dc844e7c-0645-4ed5-a0d2-afe8ce78285d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "89b7d1da-9704-4e1f-ebaf-4a3ed3261b5e"
       },
       "outputs": [
         {
@@ -212,13 +193,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "rDixpoqoY3Za",
-        "outputId": "fd63c095-7d9a-44c7-a665-3a1fea64cb75",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "989e32b4-7a59-41ca-eb25-2b1697bf76d6"
       },
       "outputs": [
         {
@@ -227,8 +208,8 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100   901  100   901    0     0   2705      0 --:--:-- --:--:-- --:--:--  2713\n",
-            "100 15.2M  100 15.2M    0     0  15.6M      0 --:--:-- --:--:-- --:--:--  472M\n"
+            "100   901  100   901    0     0   2489      0 --:--:-- --:--:-- --:--:--  2488\n",
+            "100 15.2M  100 15.2M    0     0  15.4M      0 --:--:-- --:--:-- --:--:-- 15.4M\n"
           ]
         }
       ],
@@ -249,46 +230,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "x_8cmB82Y65O",
-        "outputId": "7fd20fe6-85b3-4332-e78a-805fbbf30577",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c536b3bc-eaaf-4e3f-8faa-c67d9d35ed86"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "2025-02-11 18:52:57.304209: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2025-02-11 19:59:28.660799: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
             "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-            "E0000 00:00:1739299977.326555    2354 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "E0000 00:00:1739299977.333115    2354 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2025-02-11 18:53:02.530886: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:152] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n",
-            "I0211 18:53:02.531348 139650312314880 create_coco_tf_record.py:502] writing to output path: ./bccd_coco_tfrecords/train\n",
-            "I0211 18:53:02.606663 139650312314880 create_coco_tf_record.py:374] Building bounding box index.\n",
-            "I0211 18:53:02.608474 139650312314880 create_coco_tf_record.py:385] 0 images are missing bboxes.\n",
-            "I0211 18:53:03.449311 139650312314880 tfrecord_lib.py:168] On image 0\n",
-            "I0211 18:53:03.452713 139650312314880 tfrecord_lib.py:168] On image 100\n",
-            "I0211 18:53:03.455407 139650312314880 tfrecord_lib.py:168] On image 200\n",
-            "I0211 18:53:03.458432 139650312314880 tfrecord_lib.py:168] On image 300\n",
-            "I0211 18:53:03.461476 139650312314880 tfrecord_lib.py:168] On image 400\n",
-            "I0211 18:53:03.464095 139650312314880 tfrecord_lib.py:168] On image 500\n",
-            "I0211 18:53:03.467121 139650312314880 tfrecord_lib.py:168] On image 600\n",
-            "I0211 18:53:03.470112 139650312314880 tfrecord_lib.py:168] On image 700\n",
-            "I0211 18:53:03.506348 139650312314880 tfrecord_lib.py:180] Finished writing, skipped 6 annotations.\n",
-            "I0211 18:53:03.507714 139650312314880 create_coco_tf_record.py:537] Finished writing, skipped 6 annotations.\n"
+            "E0000 00:00:1739303968.787447   18436 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1739303968.810714   18436 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2025-02-11 19:59:42.780406: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:152] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n",
+            "I0211 19:59:42.780855 139154449383424 create_coco_tf_record.py:502] writing to output path: ./squashDataset_tfrecords/train\n",
+            "I0211 19:59:42.795774 139154449383424 create_coco_tf_record.py:374] Building bounding box index.\n",
+            "I0211 19:59:42.796445 139154449383424 create_coco_tf_record.py:385] 0 images are missing bboxes.\n",
+            "I0211 19:59:48.849666 139154449383424 tfrecord_lib.py:168] On image 0\n",
+            "I0211 19:59:48.998788 139154449383424 tfrecord_lib.py:168] On image 100\n",
+            "I0211 19:59:49.185071 139154449383424 tfrecord_lib.py:168] On image 200\n",
+            "I0211 19:59:49.481187 139154449383424 tfrecord_lib.py:168] On image 300\n",
+            "I0211 19:59:49.712125 139154449383424 tfrecord_lib.py:168] On image 400\n",
+            "I0211 19:59:49.999332 139154449383424 tfrecord_lib.py:168] On image 500\n",
+            "I0211 19:59:50.490683 139154449383424 tfrecord_lib.py:180] Finished writing, skipped 0 annotations.\n",
+            "I0211 19:59:50.521365 139154449383424 create_coco_tf_record.py:537] Finished writing, skipped 0 annotations.\n"
           ]
         }
       ],
       "source": [
         "%%bash\n",
         "\n",
-        "TRAIN_DATA_DIR='./BCC.v1-bccd.coco/train'\n",
-        "TRAIN_ANNOTATION_FILE_DIR='./BCC.v1-bccd.coco/train/_annotations.coco.json'\n",
-        "OUTPUT_TFRECORD_TRAIN='./bccd_coco_tfrecords/train'\n",
+        "TRAIN_DATA_DIR='./squashDataset/train'\n",
+        "TRAIN_ANNOTATION_FILE_DIR='./squashDataset/train/annotations.json'\n",
+        "OUTPUT_TFRECORD_TRAIN='./squashDataset_tfrecords/train'\n",
         "\n",
         "# Need to provide\n",
         "  # 1. image_dir: where images are present\n",
@@ -315,10 +294,10 @@
       "execution_count": 8,
       "metadata": {
         "id": "q8mQ8prGY8kh",
-        "outputId": "dcccba11-25cc-4f26-fe13-16a4a5484ec1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dcccba11-25cc-4f26-fe13-16a4a5484ec1"
       },
       "outputs": [
         {
@@ -367,10 +346,10 @@
       "execution_count": 9,
       "metadata": {
         "id": "-K8qlfstY-Ua",
-        "outputId": "8b130e1f-733b-4cd0-b777-382ca48acfc2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8b130e1f-733b-4cd0-b777-382ca48acfc2"
       },
       "outputs": [
         {
@@ -520,10 +499,10 @@
       "execution_count": 13,
       "metadata": {
         "id": "BZsCVBafZFIE",
-        "outputId": "144ebe82-00de-4903-ecae-875e4b76dd36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "144ebe82-00de-4903-ecae-875e4b76dd36"
       },
       "outputs": [
         {
@@ -577,11 +556,11 @@
       "execution_count": 14,
       "metadata": {
         "id": "IvfJlqI7ZIcD",
-        "outputId": "2066dda8-82c6-4532-9c99-3711e90fa7fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 500
-        }
+        },
+        "outputId": "2066dda8-82c6-4532-9c99-3711e90fa7fb"
       },
       "outputs": [
         {
@@ -848,10 +827,10 @@
       "execution_count": 15,
       "metadata": {
         "id": "2NvY8QHOZKGr",
-        "outputId": "bc7b0beb-9231-4a49-8ce8-ccf7ef707076",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bc7b0beb-9231-4a49-8ce8-ccf7ef707076"
       },
       "outputs": [
         {
@@ -917,10 +896,10 @@
       "execution_count": 17,
       "metadata": {
         "id": "3RIlbhj0ZNvt",
-        "outputId": "ec5031db-549d-4405-d622-bd51b7ace785",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ec5031db-549d-4405-d622-bd51b7ace785"
       },
       "outputs": [
         {
@@ -1040,11 +1019,11 @@
       "execution_count": 20,
       "metadata": {
         "id": "hdrsciGIZVNO",
-        "outputId": "b49df913-f418-4fd6-b81b-854fc82304cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 216
-        }
+          "height": 337
+        },
+        "outputId": "b49df913-f418-4fd6-b81b-854fc82304cb"
       },
       "outputs": [
         {
@@ -1086,10 +1065,10 @@
       "execution_count": null,
       "metadata": {
         "id": "SCjHHXvfZXX1",
-        "outputId": "357a9f2c-c891-4ca1-e8c6-29504b8e15ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "357a9f2c-c891-4ca1-e8c6-29504b8e15ff"
       },
       "outputs": [
         {
